# create-python-web-app

./: README.md  main.py  publish.sh  pyproject.toml
create_python_web_app.egg-info/: PKG-INFO  SOURCES.txt
